--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "helmet": "^7.2.0",
     "mongodb": "^4.17.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -29,6 +30,7 @@
     "@eslint/js": "^9.25.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/helmet": "^4.0.0",
     "@types/node": "^20.11.28",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
